2009-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/imap.el (imap-send-command): Simplify.
	(imap-wait-for-tag): point-max - buffer-size.

	* net/ange-ftp.el (internal-ange-ftp-mode): Use define-derived-mode.

	* emacs-lisp/easy-mmode.el (define-minor-mode): Don't use symbol-value
	with constant argument.

	* emacs-lisp/debug.el (debugger-setup-buffer): Make it multibyte.

	* emacs-lisp/cl.el (cl-macro-environment): Don't define it here.

	* emacs-lisp/checkdoc.el (checkdoc-force-history-flag):
	Change default, since most of our files don't have a history.
	(checkdoc-display-status-buffer): Don't use a hidden buffer to show to
	the user.

	* emacs-lisp/bytecomp.el (byte-compile-interactive-only-functions):
	Add comint-run.

	* calc/calc.el: Improve commenting convention.
	(calc-digit-map, toplevel): Simplify.

	* comint.el (comint-insert-input): Be careful to only set point if we
	don't delegate to some other command.

	* proced.el (proced-signal-list): Make it an alist.
	(proced-grammar-alist): Capitalize names.
	(proced-send-signal): Use a non-hidden buffer (since it's displayed).
	Disable undo manually and make it read-only.
	Use completion-annotate-function.

	* minibuffer.el (minibuffer-message): If the current buffer is not
	a minibuffer, insert the message in the echo area rather than at the
	end of the buffer.
	(completion-annotate-function): New variable.
	(minibuffer-completion-help): Use it.
	(completion--embedded-envvar-table): Environment vars are
	always case-sensitive.

2009-08-30  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-start-prog-re): New constant, extracted
	from fortran-current-defun.
	(fortran-beginning-of-subprogram): Be more precise about finding the
	start, to avoid an infinite loop in end-of-defun.  (Bug#4259)
	(fortran-end-of-subprogram): Simplify.
	(fortran-current-defun): Use fortran-start-prog-re.

2009-08-29  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (do-after-load-evaluation): Simplify.
